--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.1.5",
-  "description": "A sample Node.js app using Express 4",
+  "name": "deniz-home",
+  "version": "0.0.1",
+  "description": "A Node.js that displays data from a Raspberry Pi Zero",
   "main": "index.js",
   "scripts": {
     "start": "node --harmony index.js"
@@ -11,16 +11,16 @@
     "express": "4.13.4"
   },
   "engines": {
-    "node": "0.12.7"
+    "node": "4.3.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/denizozger/home.git"
   },
   "keywords": [
     "node",
     "heroku",
-    "express"
+    "raspberrypi"
   ],
   "license": "MIT"
 }
