--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node --harmony index.js"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "ejs": "2.4.1",
     "express": "4.13.4",
     "pg": "^4.4.4"
