--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.15.0",
     "ejs": "2.4.1",
     "express": "4.13.4",
+    "mqtt": "^1.7.0",
     "pg": "^4.4.4"
   },
   "engines": {
