--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "node --harmony index.js"
   },
   "dependencies": {
+    "bluebird": "^3.3.1",
     "body-parser": "^1.15.0",
     "ejs": "2.4.1",
     "express": "4.13.4",
+    "lodash": "^4.5.0",
     "mqtt": "^1.7.0",
     "pg": "^4.4.4"
   },
